# mlir-gpu-cost-estimation-pass

./: .gitignore  CMakeLists.txt  CostConfig.h  CostIRBuilder.cpp  CostIRBuilder.h  Loop.cpp  core.cpp  core.h  run.sh
analysis/: .gitignore  README.md  main.py  pyproject.toml
analysis/cost_analysis/: __init__.py  analysis.py  config.py  dataset.py  parser.py  plots.py
analysis/tests/: test_dataset.py  test_parser.py
python/: README.md  main.py  pyproject.toml
python/cost_ui/: __init__.py  app.py  cost_function.py  equation.py  mlir_binding.py  mlir_parser.py
python/cost_ui/static/: app.js  index.html  styles.css
python/tests/: test_app.py  test_expression.py  test_mlir_binding.py
src/: CMakeLists.txt  CostConfig.h  CostIRBuilder.cpp  CostIRBuilder.h  Loop.cpp  Loop.h  core.cpp  core.h  gpuSpec.h  pass.cpp  triton.cpp  triton.h
tests/nvgpu/: matmul_wgmma.mlir
tests/triton/: tiled_matmul.ttgir
tests/xegpu/: gemm.mlir
triton_gen/: README.md  main.py  pyproject.toml  requirements.txt  vec_add_kernel.py
triton_gen/kernels/: __init__.py  attention.py  block_scaled_matmul.py  dropout.py  grouped_gemm.py  layer_norm.py  libdevice_asin.py  matmul.py  persistent_matmul.py  softmax.py  vec_add.py
validation/: cost.mlir  cost_mlir.py  equation.py  main.py  pyproject.toml
validation/tests/: test_validation.py
