[project]
name = "cost-ui"
version = "0.1.0"
description = "Web UI for inspecting generated MLIR cost expressions"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "sympy>=1.13.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]
